--- a/HTML-CSS-Projects/X(Twitter)-Clone/Copy&Learn/copy.html
+++ b/HTML-CSS-Projects/X(Twitter)-Clone/Copy&Learn/copy.html
@@ -1,3 +1,72 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en" style="overflow-y: scroll; overscroll-behavior-y: none; font-size: 15px; color-scheme: light;" data-lt-installed="true">
+  <head>
+    <style>
+      input::placeholder { user-select: none; -webkit-user-select: none; } iframe { color-scheme: auto; }
+    </style>
+    <style>
+      @font-face {
+        font-family: TwitterChirp;
+        src: url(https://abs.twimg.com/responsive-web/client-web/Chirp-Light.3a18e64a.woff2) format('woff2'), url(https://abs.twimg.com/responsive-web/client-web/Chirp-Light.7a5673aa.woff) format('woff');
+        font-weight: 300;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+      @font-face {
+        font-family: TwitterChirp;
+        src: url(https://abs.twimg.com/responsive-web/client-web/Chirp-Regular.80fda27a.woff2) format('woff2'), url(https://abs.twimg.com/responsive-web/client-web/Chirp-Regular.60b215ba.woff) format('woff');
+        font-weight: 400;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+      @font-face {
+        font-family: TwitterChirp;
+        src: url(https://abs.twimg.com/responsive-web/client-web/Chirp-Medium.f8e2739a.woff2) format('woff2'), url(https://abs.twimg.com/responsive-web/client-web/Chirp-Medium.20fc288a.woff) format('woff');
+        font-weight: 500;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+      @font-face {
+        font-family: TwitterChirp;
+        src: url(https://abs.twimg.com/responsive-web/client-web/Chirp-Bold.ebb56aba.woff2) format('woff2'), url(https://abs.twimg.com/responsive-web/client-web/Chirp-Bold.a573679a.woff) format('woff');
+        font-weight: 700;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+      @font-face {
+        font-family: TwitterChirp;
+        src: url(https://abs.twimg.com/responsive-web/client-web/Chirp-Heavy.f44ae4ea.woff2) format('woff2'), url(https://abs.twimg.com/responsive-web/client-web/Chirp-Heavy.d70ec7ca.woff) format('woff');
+        font-weight: 800;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+      @font-face {
+        font-family: TwitterChirpExtendedHeavy;
+        src: url(https://abs.twimg.com/fonts/v1/chirp-extended-heavy-web.woff2) format('woff2'), url(https://abs.twimg.com/fonts/v1/chirp-extended-heavy-web.woff) format('woff');
+        font-weight: 800;
+        font-style: 'normal';
+        font-display: 'swap';
+      }
+    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
+    <style>
+      @media (prefers-color-scheme: dark) {
+        #placeholder {
+          background-color: #000000;
+        }
+      }
+    </style>
+    <style>
+      html, body {
+        height: 100%;
+      }
+
+      ::cue {
+        white-space: normal;
+      }
+    </style>
+    <title>Katereverie's X (Twitter) Clone Page</title>
+  </head>
+  <body></body>
 </html>
